[tool.poetry]
name = "oahu-dive-conditions"
version = "0.1.0"
description = "Oahu dive conditions tracker and digest generator"
authors = ["Developer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
erddapy = "^2.2.0"
requests = "^2.31.0"
pandas = "^2.1.0"
pyyaml = "^6.0.1"
apscheduler = "^3.10.4"
twilio = "^8.10.0"
sendgrid = "^6.10.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
